# libpolycrypto

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
experiments/: redraw-all.sh  redraw-vss-and-dkg-deal.sh
experiments/dkg/: README.md  amt-dkg-2-1048576-dvorak.csv  amt-dkg-2-1048576-macbook.csv  export-latex.py  fk-dkg-2-1048576-macbook.csv  kate-dkg-2-32768-dvorak.csv  large-scale-experiments.txt  redraw.sh  run-experiments.sh  test-experiments.txt
experiments/dkg-bw/: bandwidth-1M.csv  benchmark.sh  export-latex.py  redraw.sh
experiments/dkg/fk-vs-amt/: redraw.sh
experiments/threshsig/: efficient-threshsig-2-1048576-dvorak.csv  export-latex.py  naive-threshsig-2-1048576-dvorak.csv  redraw-blogpost.sh  redraw.sh  run-experiments.sh
experiments/vss/: amt-fk-macbook.csv  amt.csv  export-latex.py  feld.csv  fk.csv  kate-sim-experiments.txt  kate.csv  large-scale-experiments.txt  macbook-experiments.txt  medium-scale-experiments.txt  redraw.sh  run-experiments.sh  small-scale-experiments.txt  test-experiments.sh
experiments/vss/fk-vs-amt-figures/: redraw.sh
libpolycrypto/: CMakeLists.txt
libpolycrypto/app/: BandwidthCalc.cpp  CMakeLists.txt  ParamsGenPowers.cpp  ParamsGenTrapdoors.cpp  ParamsValidate.cpp  PolylogDkg.cpp
libpolycrypto/bench/: BenchAMT.cpp  BenchApproxVerifyKateProofs.cpp  BenchBatchVerification.cpp  BenchConvertAndMultiexp.cpp  BenchDKG.cpp  BenchExp.cpp  BenchFFT.cpp  BenchFk.cpp  BenchMultiexp.cpp  BenchNizkPok.cpp  BenchNtlConversion.cpp  BenchPairing.cpp  BenchPolyDivideXnc.cpp  BenchPolynomialOps.cpp  BenchRootsOfUnityEval.cpp  BenchSecretReconstruction.cpp  BenchThresholdSig.cpp  BenchVSS.cpp  CMakeLists.txt  Utils.h
libpolycrypto/examples/: CMakeLists.txt
libpolycrypto/include/polycrypto/: AbstractKatePlayer.h  AbstractPlayer.h  AccumulatorTree.h  AmtDkg.h  BinaryTree.h  Dkg.h  DkgCommon.h  FFT.h  FFThresh.h  FeldmanDkg.h  KZG.h  KateDkg.h  KatePublicParameters.h  Lagrange.h  NizkPok.h  NtlLib.h  PolyCrypto.h  PolyOps.h  RootsOfUnityEval.h  Utils.h
libpolycrypto/src/: AmtDkg.cpp  CMakeLists.txt  FFThresh.cpp  KateDkg.cpp  KatePublicParameters.cpp  Kzg.cpp  Lagrange.cpp  NizkPok.cpp  PolyCrypto.cpp  PolyOps.cpp  Utils.cpp
libpolycrypto/test/: CMakeLists.txt  TestAMT.cpp  TestDKGandVSS.cpp  TestFk.cpp  TestGroupFft.cpp  TestKatePublicParams.cpp  TestLagrange.cpp  TestLibff.cpp  TestNizkPok.cpp  TestParallelPairing.cpp  TestPolyDivideXnc.cpp  TestPolyOps.cpp  TestRootsOfUnity.cpp  TestRootsOfUnityEval.cpp
scripts/linux/: cmake.sh  dkg-cols.sh  humanize-csv.py  install-deps.sh  install-libs.sh  make.sh  plot-bandwidth.py  plot-deal-times.py  plot-dkg-times.py  plot-fk-speedup-and-down.py  plot-fk-speedup.py  plot-threshsig.py  plot-vss-times.py  recompute-polylog-dkg.sh  set-env.sh  submodule-update.sh  test.sh  vss-cols.sh
scripts/linux/shlibs/: check-env.sh  os.sh
